--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,7 @@
         <button class="btn btn-primary text-center" type="button">
             Importar Negociações
         </button>
-        <button class="btn btn-primary text-center" type="button">
+        <button class="btn btn-primary text-center" onclick="negociacaoController.apaga(event)" type="button">
             Apagar
         </button>
     </div> 
