--- a/client/index.html
+++ b/client/index.html
@@ -34,10 +34,10 @@
     </form>
     
     <div class="text-center">
-        <button class="btn btn-primary text-center" type="button">
+        <button onclick="negociacaoController.obterNegociacoes()" class="btn btn-primary text-center" type="button">
             Importar Negociações
         </button>
-        <button class="btn btn-primary text-center" onclick="negociacaoController.apaga(event)" type="button">
+        <button onclick="negociacaoController.apaga(event)" class="btn btn-primary text-center" type="button">
             Apagar
         </button>
     </div> 
@@ -56,6 +56,7 @@
     <script src="js/app/views/MensagemView.js"></script>
     <script src="js/app/services/ProxyFactory.js"></script>
     <script src="js/app/helpers/Bind.js"></script>
+    <script src="js/app/services/NegociacaoService.js"></script>
     <script>
         let negociacaoController = new NegociacaoController();
     </script>
