--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,7 @@
     
     <div id="negociacoesView"></div>
     
+    <script src="js/app/polyfill/es6.js"></script>
     <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/controllers/NegociacaoController.js"></script>
     <script src="js/app/helpers/DataHelper.js"></script>
